2nd section done

--- a/index.html
+++ b/index.html
@@ -50,9 +50,20 @@
   </div>
 </section>
   <!-- hero section ended -->
+   <!-- 2nd section started -->
+    <section>
+      <div class="textbox text">
+        <h5 class="text-center p-5"><i class="fa-solid fa-music"></i>Music</h5>
+        <p class="text-center mt-3 fw-bold">Stream over 45 million songs, ad-free. Or download albums and tracks to listen to offline. All the music in your personal myTunes library — no matter where it came <br> from — lives right alongside the Orange Music catalog. Start your free three-month trial with no commitment, and cancel anytime.
+        </p>
+        <button  class="redbtn mt-3"type="button">Start Your  Trial Now</button>
+        <p class="text-center mt-5 p-2">Orange Music is available in myTunes, and for iOS and Android devices</p>
+      </div>
+    </section>
+   <!-- 2nd section ended -->
       </main>
    
-
+      <script src="https://kit.fontawesome.com/3923869c7a.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
