4th section done

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <!-- hero section ended -->
    <!-- 2nd section started -->
     <section>
-      <div class="textbox text">
+      <div class=" text position-relative">
         <h5 class="text-center p-5"><i class="fa-solid fa-music"></i>Music</h5>
         <p class="text-center mt-3 fw-bold">Stream over 45 million songs, ad-free. Or download albums and tracks to listen to offline. All the music in your personal myTunes library — no matter where it came <br> from — lives right alongside the Orange Music catalog. Start your free three-month trial with no commitment, and cancel anytime.
         </p>
@@ -61,6 +61,31 @@
       </div>
     </section>
    <!-- 2nd section ended -->
+   <!-- 3rd section started -->
+    <section class="d-flex justify-content-center">
+      <div class="image img-fluid">
+        <img src="./assets/ipad-iphone.png" alt="" >
+      </div>
+    </section>
+   <!-- 3rd section ended -->
+   <!-- 4th section started-->
+    <section>
+      <div class="txt">
+        <h5 class="text-center ">The movie and TV collection you always wished for. Granted.</h5>
+    <p class="text-center mt-3">With over 100,000 movies and TV shows to choose from, there’s always something great to watch on myTunes and if you watch on Orange TV 4K, you’ll be able to enjoy a <br> tremendous selection of your favorite content in 4K HDR. So get ready to enjoy episodes of your favorite TV shows or hit movies you’ve been waiting to see — anytime, <br>anywhere. Just tap to play, or even download if you’re going somewhere you won’t have Wi-Fi.</p>
+    <button class="prplebtn mt-3">READ MORE</button>
+      </div>
+      <div class="png d-flex justify-content-center mt-5">
+        <div class="png">
+          <img src="./assets/mac.png" alt="">
+        </div>
+      </div>
+    </section>
+   <!-- 4th section ended -->
+   <!-- 5th section started -->
+   
+   <!-- 5th section ended -->
+
       </main>
    
       <script src="https://kit.fontawesome.com/3923869c7a.js" crossorigin="anonymous"></script>
