--- a/index.html
+++ b/index.html
@@ -83,7 +83,12 @@
     </section>
    <!-- 4th section ended -->
    <!-- 5th section started -->
-   
+    <section>
+      <div class="imgae2">
+        <img src="./assets/video.png" alt="" width="100%">
+      </div>
+
+    </section>
    <!-- 5th section ended -->
 
       </main>
