--- a/index.html
+++ b/index.html
@@ -84,12 +84,15 @@
    <!-- 4th section ended -->
    <!-- 5th section started -->
     <section>
-      <div class="imgae2">
-        <img src="./assets/video.png" alt="" width="100%">
-      </div>
-
-    </section>
-   <!-- 5th section ended -->
+          <div class="videobox">
+            <div class="d-flex align-content-between justify-content-center">
+              <p class="fw-bold para ">A world of entertainment. Available wherever you are. </p></div>
+               <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem veniam nobis, nisi ut expedita, doloribus reprehenderit explicabo non velit repellat alias saepe inventore <br>? Molestias suscipit eos tempora? Quae quaerat cumque in veritatis impedit dolorum sapiente recusandae minima quo aperiam quam, excepturi quasi totam <br>ad quas? Ipsam laudantium soluta delectus!</p>
+              
+            </div>
+          </div>
+    </section> 
+   <!-- 5th section ended
 
       </main>
    
