6th section done

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
    <!-- 2nd section ended -->
    <!-- 3rd section started -->
     <section class="d-flex justify-content-center">
-      <div class="image img-fluid">
+      <div class="image img-fluid ipadimage">
         <img src="./assets/ipad-iphone.png" alt="" >
       </div>
     </section>
@@ -92,7 +92,23 @@
             </div>
           </div>
     </section> 
-   <!-- 5th section ended
+    <!-- 5th section ended -->
+    <!-- 6th section started -->
+     <section class="d-flex justify-content-center align-content-center gap-5 giftbox">
+      <div class="giftimage">
+        <img src="./assets/gift_card.png" alt="">
+      </div>
+      <div class="gifttext">
+        <h4>Gift Card</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt cum explicabo, excepturi eaque <br>  commodi minima quas repellendus assumenda facere hic, earum quasi iste asperiores molestiae <br> obcaecati laborum, voluptatum alias velit cupiditate! Quae soluta sapiente quasi, iusto quam <br>magnam doloribus natus quod eius, rerum asperiores aspernatur. Illum neque sequi odit fuga</p>
+        <br>
+        <p>Already have an Orange MyTunes Music Gift Card?</p>
+        <hr>
+        <button  class="redembtn"  type="button">Redeem</button>
+      </div>
+     </section>
+    <!-- 6th section ended -->
+    
 
       </main>
    
