--- a/index.html
+++ b/index.html
@@ -108,9 +108,57 @@
       </div>
      </section>
     <!-- 6th section ended -->
-    
-
-      </main>
+    </main>
+    <footer class="footer">
+      <div class="container-fluid">
+        <div class="row p-5">
+          <div class="col-sm-12 col-md-12 col-lg-3">
+            <ul>
+              <li>Shop & Learn</li>
+              <hr>
+              <li>Music</li>
+              <li>Movies</li>
+              <li>Shows</li>
+              <li>Apps</li>
+              <li>Gift Cards</li>
+            </ul>
+          </div>
+          <div class="col-sm-12 col-md-12 col-lg-3">
+            <ul>
+              <li>Orange Store</li>
+              <hr>
+              <li>Find a Store</li>
+              <li>Today at Orange</li>
+              <li>Financing</li>
+              <li>Orange Camp</li>
+              <li>Order Status</li>
+            </ul>
+          </div>
+          <div class="col-sm-12 col-md-12 col-lg-3">
+            <ul>
+              <li>Education & Business</li>
+              <hr>
+              <li>Orange & Education</li>
+              <li>Shop for Collage</li>
+              <li>Orange & Business</li>
+              <li>Shop for Business</li>
+              <li>Jobs</li>
+            </ul>
+          </div>
+          <div class="col-sm-12 col-md-12 col-lg-3">
+            <ul>
+              <li>About Orange</li>
+              <hr>
+              <li>Newsroom</li>
+              <li>Orange Leadership</li>
+              <li>Investors</li>
+              <li>Envents</li>
+              <li>Contact Orange</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
    
       <script src="https://kit.fontawesome.com/3923869c7a.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
